<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.neighbour_list.NeighbourDetailActivity"
    android:background="@color/colorGrey">

    <android.support.v7.widget.CardView
        android:id="@+id/activity_neighbour_detail_cardview_image"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/activity_neighbour_detail_profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/profil" />
        <TextView
            android:id="@+id/activity_neighbour_detail_name_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:layout_marginStart="15dp"
            android:textSize="35sp"
            android:textColor="@color/colorWhite"
            android:text="Nom sur l'image"/>
        <ImageView
            android:id="@+id/activity_neighbour_detail_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left"
            android:tint="@color/colorWhite"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/activity_neighbour_detail_cardview_name"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_neighbour_detail_cardview_image">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/activity_neighbour_detail_linearlayout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/activity_neighbour_detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:text="Nom"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorGrey"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_map_marker"
                    android:layout_margin="5dp"
                    android:tint="@color/colorRed"/>
                <TextView
                    android:id="@+id/activity_neighbour_detail_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="5dp"
                    android:text="Adresse"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_phone"
                    android:layout_margin="5dp"
                    android:tint="@color/colorRed"/>
                <TextView
                    android:id="@+id/activity_neighbour_detail_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="5dp"
                    android:text="Numéro de téléphone"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_web"
                    android:layout_margin="5dp"
                    android:tint="@color/colorRed"/>
                <TextView
                    android:id="@+id/activity_neighbour_detail_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Adresse facebook"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/activity_neighbour_detail_cardview_about"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_neighbour_detail_cardview_name">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:text="A propos de moi"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorGrey"/>
            </LinearLayout>

            <TextView
                android:id="@+id/activity_neighbour_detail_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bla bla bla"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_neighbour_detail_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star"
        android:elevation="10dp"
        app:backgroundTint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_neighbour_detail_cardview_image"
        android:translationY="-24dp"
        android:translationX="-10dp"/>
</android.support.constraint.ConstraintLayout>


